# drusniel-voxels-bevy

./: .gitignore  Cargo.toml  README.md  game_output.txt  game_run.txt  run_stderr.txt  v0.3_grass_material.rs  v0.3_vegetation_mod.rs
.agent/tasks/: god_rays_and_dust.md
assets/config/: ambient_occlusion.yaml  atmosphere.yaml  camera.yaml  fog.yaml  gtao.yaml  inputs.yaml  logging.yaml  pcss.yaml  props.yaml  radiance_cascades.yaml  settings.json  settings.yaml  terrain.yaml  terrain_generation.yaml  terrain_tools.yaml  volumetric_clouds.yaml  water.yaml  weather.yaml  wind.yaml
assets/models/: ASSET_INVENTORY.md
assets/shaders/: billboard.wgsl  billboard_prepass.wgsl  blocky_terrain.wgsl  building.wgsl  cloud_noise.wgsl  contact_shadows.wgsl  gerstner_waves.wgsl  god_rays.wgsl  grass.wgsl  grass_prepass.wgsl  gtao_denoise.wgsl  gtao_main.wgsl  gtao_prepass.wgsl  pcss_shadows.wgsl  props.wgsl  radiance_cascades.wgsl  sdf_shadows.wgsl  sdf_volume.wgsl  simple_lod.wgsl  sss_vegetation.wgsl  stochastic_probes.wgsl  triplanar_terrain.wgsl  volumetric_clouds.wgsl  water_caustics.wgsl  water_detail_normals.wgsl  water_displacement_compute.wgsl  water_foam.wgsl  water_fragment.wgsl  water_reflection_compositor.wgsl  wind_animation.wgsl
benches/: meshing_benchmark.rs  world_benchmark.rs
config/: blocky_textures.yaml  props.yaml
docs/: BEVY_0_18_MIGRATION.md  GOD_RAYS_TESTING.md  MAGICAVOXEL_INTEGRATION.md  PHASE_1_COMPLETE.md  blocky_textures_config.md  chunk-seam-fix.md  debugging_blue_vegetation.md  debugging_blue_vegetation_walkthrough.md  grass-natural-plan.md  inventory-icons.md  lod-surface-nets-implementation-plan.md  performance-analysis-research.md  pre-computing-visibility-research.md  prop-persistence-plan.md  rendering-enhancement-roadmap.md  rtx-40xx-texture-startup-check.md  shadow-optimization-plan.md  shallow-water-waves-fix.md  terrain-simplification.md  terrain_rendering_modes.md  volumetric_fog_and_god_rays.md  water-visuals-summary.md  wind-foliage-depth-prepass.md
docs/building/: building-system-plan.md
docs/images/: convert_png_to_jpg.ps1  convert_png_to_jpg.sh
scripts/: analyze_models.py  analyze_simple.py  convert-grass-assets.ps1  download-assets.ps1  download-nature-assets.ps1
src/: constants.rs  debug_ui.rs  environment.rs  inventory_ui.rs  lib.rs  main.rs  map.rs  performance.rs
src/building/: mod.rs  (+4 more)
tests/: chunk_tests.rs  constants_tests.rs  meshing_tests.rs  persistence_tests.rs  terrain_generation_tests.rs  voxel_types_tests.rs  world_coordinate_tests.rs
(+118 files in other folders)
