[package]
name = "voxel_builder"
version = "0.1.0"
edition = "2024"
default-run = "voxel_builder"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking", "jpeg", "png", "pbr_specular_textures"] }
bevy_mesh = "0.17"
bevy_shader = "0.17"
bevy_water = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
thiserror = "2.0"
fast-surface-nets = "0.2"
ndshape = "0.3"
bincode = "1.3"
bevy_egui = "0.38.1"
bevy-inspector-egui = "0.35.0"
bevy_hanabi = "0.17.0"
bevy_mod_outline = "0.10.3"
bevy_tweening = "0.14.0"
oxidized_navigation = "0.12.0"
leafwing-input-manager = "0.19.0"
iyes_progress = "0.15.0"
avian3d = { version = "0.4", features = ["3d", "parallel", "parry-f32", "debug-plugin"] }
bevy-tnua = "0.26"
bevy-tnua-avian3d = "0.8"
pollster = "0.4.0"
wgpu = { version = "26.0.1", default-features = false, features = ["dx12", "vulkan"] }

[dev-dependencies]
criterion = "0.5"
rstest = "0.22"
tempfile = "3.10"

[[bench]]
name = "meshing_benchmark"
harness = false

[[bench]]
name = "world_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wgpu-core = { path = "patches/wgpu-core-26.0.1" }
